build: Add support for an install target
The default install target (executed via, e.g., ninja install) does
installing with reasonable default options. An install Makefile target
is also implemented.

Signed-off-by: Enric Balletbo i Serra <eballetbo@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -1,2 +1,4 @@
-project('oz2image', 'c')
+project('oz2', 'c')
 subdir('src')
+install_subdir('data/images', install_dir : 'share/oz2', strip_directory : false)
+install_subdir('data/maps', install_dir : 'share/oz2', strip_directory : false)
