--- a/debos/debian-uefi.yaml
+++ b/debos/debian-uefi.yaml
@@ -1,7 +1,7 @@
 {{- $suite := or .suite "stretch" -}}
 {{- $architecture := or .architecture "amd64" -}}
 {{- $ospack := or .ospack (printf "debian-base-%s-%s" $suite $architecture) -}}
-{{- $image := or .image (printf "debian-uefi-image-%s-%s" $suite $architecture) -}}
+{{- $image := or .image (printf "debian-uefi-%s-%s" $suite $architecture) -}}
 
 architecture: {{ $architecture }}
 
