debos: debian-base: Remove already enabled services
systemd-networkd and systemd-resolved are enabled by the
setup-networking.sh script, so do not renable again and add description
to the command to be clear that this is used to enable the weston
compositor.

Signed-off-by: Enric Balletbo i Serra <eballetbo@gmail.com>

--- a/debos/debian-base.yaml
+++ b/debos/debian-base.yaml
@@ -97,8 +97,9 @@ actions:
     script: scripts/setup-networking.sh
 
   - action: run
+    description: Setup wayland compositor
     chroot: true
-    command: systemctl enable systemd-networkd systemd-resolved weston
+    command: systemctl enable weston
 
   - action: pack
     file: {{ $ospack }}.tar.gz
