debos: debian-base: Install the hikingGPS app into the image
Download latest version of the application from github, build and install
into the base image.

Signed-off-by: Enric Balletbo i Serra <eballetbo@gmail.com>

--- a/debos/debian-base.yaml
+++ b/debos/debian-base.yaml
@@ -101,6 +101,11 @@ actions:
     chroot: true
     command: systemctl enable weston
 
+  - action: run
+    description: Install the hikingGPS app
+    chroot: true
+    script: scripts/install-app.sh
+
   - action: pack
     file: {{ $ospack }}.tar.gz
 
