debos: Weston requires the systemd-notify.so plugin
Otherwise systemd does not receive that weston was started and the
desktop stops after the timeout. To fix this specify to weston the
modules that should load.

Signed-off-by: Enric Balletbo i Serra <eballetbo@gmail.com>

--- a/debos/overlays/base/usr/lib/systemd/system/weston.service
+++ b/debos/overlays/base/usr/lib/systemd/system/weston.service
@@ -37,7 +37,7 @@ ConditionPathExists=/dev/tty0
 
 # Requires systemd-notify.so Weston plugin.
 Type=notify
-ExecStart=/usr/bin/weston --backend=fbdev-backend.so
+ExecStart=/usr/bin/weston --modules=systemd-notify.so --backend=fbdev-backend.so
 
 # Optional watchdog setup
 TimeoutStartSec=60
