--- a/debos/debian-base.yaml
+++ b/debos/debian-base.yaml
@@ -1,4 +1,4 @@
-{{- $suite := or .suite "stretch" -}}
+{{- $suite := or .suite "sid" -}}
 {{- $architecture := or .architecture "amd64" -}}
 {{- $ospack := or .ospack (printf "debian-base-%s-%s" $suite $architecture) -}}
 
